# vesc

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  manifest.xml  setup.sh
config/: vesc.yaml
include/vesc_driver/: datatypes.h  vesc_driver.h
launch/: vesc_driver_node.launch
scripts/: joystick_teleop.py  keyboard_teleop.py
src/: vesc_driver.cpp
vesc_ackermann/: CMakeLists.txt  Makefile  manifest.xml
vesc_driver/: CMakeLists.txt  Makefile  manifest.xml
vesc_driver/config/: vesc.yaml
vesc_driver/include/vesc_driver/: datatypes.h  vesc_driver.h  vesc_interface.h  vesc_packet.h
vesc_driver/launch/: vesc_driver_node.launch  vesc_driver_nodelet.launch
vesc_driver/src/: vesc_driver.cpp  vesc_driver_node.cpp  vesc_interface.cpp  vesc_packet.cpp
vesc_msgs/: .gitignore  CMakeLists.txt  manifest.xml
vesc_msgs/msg/: VescState.msg
